--- a/projekt/pom.xml
+++ b/projekt/pom.xml
@@ -30,6 +30,11 @@
 	   <artifactId>hibernate-entitymanager</artifactId>
 	   <version>4.3.9.Final</version>
     </dependency>
+    <dependency>
+		<groupId>com.toedter</groupId>
+		<artifactId>jcalendar</artifactId>
+		<version>1.4</version>
+	</dependency>    
   </dependencies>
   
   <build>
