--- a/projekt/pom.xml
+++ b/projekt/pom.xml
@@ -3,11 +3,11 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>ba.unsa.etf.si</groupId>
-  <artifactId>proba</artifactId>
+  <artifactId>projekt</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>proba</name>
+  <name>projekt</name>
   <url>http://maven.apache.org</url>
 
   <properties>
