--- a/projekt/pom.xml
+++ b/projekt/pom.xml
@@ -35,6 +35,12 @@
 		<artifactId>jcalendar</artifactId>
 		<version>1.4</version>
 	</dependency>    
+	<dependency>
+		<groupId>com.itextpdf</groupId>
+		<artifactId>itextpdf</artifactId>
+		<version>5.5.6</version>
+	</dependency>
+	
   </dependencies>
   
   <build>
